Add Fluent Bit configuration and RBAC resources, and deploy Fluent Bit as a DaemonSet to collect and forward logs from application containers running in the cluster

--- a/exercises/module-8/httpserver-deploy.yaml
+++ b/exercises/module-8/httpserver-deploy.yaml
@@ -37,5 +37,5 @@ spec:
             preStop:
               exec:
                 command: [ "/bin/sh","-c","kill -SIGTERM $(pidof go-app)" ]
-
+      terminationGracePeriodSeconds: 30
 
