--- a/exercises/module-8/httpserver-deploy.yaml
+++ b/exercises/module-8/httpserver-deploy.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
         - name: httpserver
-          image: dontry/httpserver:0.2.0
-          imagePullPolicy: Never
+          image: dontry/httpserver
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           resources:
