fixed docker issue and completed docs

--- a/exercises/module-10/httpserver-deploy.yaml
+++ b/exercises/module-10/httpserver-deploy.yaml
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
         - name: httpserver
-          image: dontry/httpserver
-          imagePullPolicy: IfNotPresent
+          image: dontry/httpserver:0.6.0
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
           resources:
